Adjust for specimen refactor (#81)